--- a/blog-admin/package.json
+++ b/blog-admin/package.json
@@ -22,6 +22,7 @@
     "normalize.css": "^8.0.0",
     "nprogress": "^0.2.0",
     "vue": "^2.5.17",
+    "vue-image-crop-upload": "^2.5.0",
     "vue-meditor": "^0.9.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
